--- a/FastCollectionView/FastCollectionView.Android/FastCollectionView.Android.csproj
+++ b/FastCollectionView/FastCollectionView.Android/FastCollectionView.Android.csproj
@@ -8,11 +8,8 @@
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Binwell.Controls.FastCollectionView.Droid</RootNamespace>
-    <AssemblyName>FastCollectionView.Android</AssemblyName>
+    <AssemblyName>Binwell.Controls.FastCollectionView.Android</AssemblyName>
     <AndroidApplication>True</AndroidApplication>
-    <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
-    <AndroidResgenClass>Resource</AndroidResgenClass>
-    <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
@@ -49,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.3.0.912540" />
+    <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="27.0.2.1" />
@@ -57,45 +54,13 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="27.0.2.1" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Renderers\FastCollection\EndlessRecyclerViewScrollListener.cs" />
-    <Compile Include="Renderers\FastCollection\FastCollectionViewRenderer.cs" />
-    <Compile Include="Renderers\FastCollection\FastCollectionAdapter.cs" />
-    <Compile Include="Renderers\FastCollection\FormsToNativeDroid.cs" />
-    <Compile Include="Renderers\FastCollection\SmoothGridLayoutManager.cs" />
-    <Compile Include="Renderers\FastCollection\SwipeRefreshLayoutWithDisabling.cs" />
-    <Compile Include="Renderers\FastCollection\ViewHolders.cs" />
-    <Compile Include="Resources\Resource.Designer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\AboutResources.txt" />
-    <None Include="Assets\AboutAssets.txt" />
-    <None Include="Properties\AndroidManifest.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Tabbar.axml" />
-    <AndroidResource Include="Resources\layout\Toolbar.axml" />
-    <AndroidResource Include="Resources\values\styles.xml" />
-    <AndroidResource Include="Resources\values\colors.xml" />
-    <AndroidResource Include="Resources\mipmap-anydpi-v26\icon.xml" />
-    <AndroidResource Include="Resources\mipmap-anydpi-v26\icon_round.xml" />
-    <AndroidResource Include="Resources\mipmap-hdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-hdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable-hdpi\" />
-    <Folder Include="Resources\drawable-xhdpi\" />
-    <Folder Include="Resources\drawable-xxhdpi\" />
-    <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
+    <Compile Include="FastCollection\EndlessRecyclerViewScrollListener.cs" />
+    <Compile Include="FastCollection\FastCollectionViewRenderer.cs" />
+    <Compile Include="FastCollection\FastCollectionAdapter.cs" />
+    <Compile Include="FastCollection\FormsToNativeDroid.cs" />
+    <Compile Include="FastCollection\SmoothGridLayoutManager.cs" />
+    <Compile Include="FastCollection\SwipeRefreshLayoutWithDisabling.cs" />
+    <Compile Include="FastCollection\ViewHolders.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FastCollectionView\FastCollectionView.csproj">
